--- a/Form.html
+++ b/Form.html
@@ -28,14 +28,14 @@
             <tr>
                 <th><label>Customer Mobile Number</label></th>
                 <th>
-                    <input type="text" name="mnumber" required placeholder="i.e,1234567890">
+                    <input type="number" name="number" required placeholder="i.e,1234567890">
                 </th>
             </tr>
 
             <tr>
                 <th><label>Customer Email Id</label></th>
                 <th>
-                    <input type="text" name="Email" required placeholder="i.e,abc@123">
+                    <input type="email" name="Email" required placeholder="i.e,abc@123">
                 </th>
             </tr>
         </table>
